Upgrade to Spring Framework `7.0`
* Upgrade to Spring Data `2025.1.0`
* Upgrade to Spring Security `7.0`
* Fix all the compilation errors, including for Kotlin (not clear how they passed before upgrade to SF `7.0`)