@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.io.Serializable;
 import java.net.URI;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -861,9 +860,9 @@ public class HttpRequestExecutingMessageHandlerTests {
 
 		StepVerifier.create(httpHeadersSink.asMono())
 				.assertNext(headers ->
-						assertThat(headers)
-								.containsEntry(HttpHeaders.CONTENT_TYPE,
-										Arrays.asList(MediaType.APPLICATION_JSON_VALUE)))
+						assertThat(headers.headerSet())
+								.contains(Map.entry(HttpHeaders.CONTENT_TYPE,
+										List.of(MediaType.APPLICATION_JSON_VALUE))))
 				.verifyComplete();
 	}
 
